--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
-  background-color: #fff000;
-  background-image: linear-gradient(315deg, #fff000 0%, #ed008c 74%);
+  background-color: #f7825c;
   margin: 35px 55px;
   padding: 25px 20px;
   border: white 20px double;
