--- a/styles.css
+++ b/styles.css
@@ -9,4 +9,7 @@ body {
   background-color: aliceblue;
   margin: 20px 15px;
   padding: 25px 20px;
+  margin: 0 auto;
+  max-width: 600px;
+  box-shadow: 10px 5px 5px gold;
 }
