--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,12 @@ body {
   padding: 25px 20px;
   border: white 20px double;
   border-radius: 1% 1%;
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 }
+
 .weather-app {
   background-color: aliceblue;
   margin: 20px 15px;
