--- a/styles.css
+++ b/styles.css
@@ -21,4 +21,9 @@ body {
 
 .search-form-input {
   background-color: rgb(153, 226, 199);
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
 }
