--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,13 @@ body {
   font-size: 16px;
   padding: 15px 20px;
 }
+
+.search-form-button {
+  background: lightcoral;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
+}
