added span class weather-paragraph to weather app details and updated on css

--- a/styles.css
+++ b/styles.css
@@ -47,5 +47,10 @@ body {
 }
 
 .weather-app-details {
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: 400;
+}
+
+.weather-paragraph {
+  font-size: 17px;
 }
