--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: #f7825c;
   margin: 35px 55px;
-  padding: 25px 20px;
+  padding: 28px 20px;
   border: white 20px double;
   border-radius: 1% 1%;
   font-family: "Playfair Display", serif;
@@ -12,7 +12,7 @@ body {
 
 .weather-app {
   background-color: aliceblue;
-  margin: 20px 15px;
+  margin: 20px 18px;
   padding: 25px 20px;
   margin: 0 auto;
   max-width: 700px;
@@ -56,4 +56,7 @@ body {
 }
 .weather-app-details strong {
   color: #f65282;
+}
+h1 {
+  display: block;
 }
