--- a/styles.css
+++ b/styles.css
@@ -63,9 +63,9 @@ h1 {
 
 h2 {
   display: block;
-  font-size: 57px;
+  font-size: 75px;
   position: fixed;
-  top: 87px;
+  top: 57px;
   right: 340px;
 }
 
@@ -73,11 +73,12 @@ h2 {
   position: relative;
   top: -8px;
   font-size: 40px;
-  margin-right: 5px;
+  margin-right: -20px;
 }
 
 .temperature-symbol {
   font-size: 28px;
   position: relative;
   top: -38px;
+  margin-left: -10px;
 }
